gobmkida/c1/do_push_owl
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/do_push_owl/src/engine/owl.c:5517:27: error: use of undeclared identifier 'local_owl_data'; did you mean 'other_owl_data'?
memcpy( v4, *owl, sizeof( local_owl_data)); 
                          ^~~~~~~~~~~~~~
                          other_owl_data
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/do_push_owl/src/engine/owl.c:102:31: note: 'other_owl_data' declared here
static struct local_owl_data *other_owl_data;
                              ^
1 error generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/do_push_owl/src/obj/1/owl.o] Error 1
